<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CarActivity"
    tools:showIn="@layout/activity_car">

    <ScrollView
        android:id="@+id/car_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/car_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/default_car" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_edit_border"
                android:layout_weight="1"
                android:gravity="end"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_edit_border"
                android:layout_weight="1"
                android:gravity="end"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_margin="@dimen/text_edit_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gear_box_type"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/gear_box_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textSize="@dimen/car_field_value_font_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/text_edit_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableBottom="@color/colorPrimary"
                    android:text="@string/body_type"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/body_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textSize="@dimen/car_field_value_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/text_edit_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableBottom="@color/colorPrimary"
                    android:text="@string/engine_type"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/engine_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textSize="@dimen/car_field_value_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/text_edit_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableBottom="@color/colorPrimary"
                    android:text="@string/power"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textSize="@dimen/car_field_value_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/text_edit_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableBottom="@color/colorPrimary"
                    android:text="@string/year"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textSize="@dimen/car_field_value_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/create_request"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Оформить заказ"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="421dp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>